# gone_money

./: .env.template  .gitignore  Cargo.toml  Makefile  docker-compose.yaml
migrations/: 00001_init_db_setup.sql  00001_initdb.sql  00002_auth_setup.sql  00002_create_web_role.sql  00003_add_pgjwt_manually.sql  00003_add_user_table.sql  00004_add_loan_table.sql  00004_add_login.sql  00005_add_signup.sql  00005_grant_select_to_users_and_loan.sql  00006_add_api_writer_role.sql  00006_add_generate_ulid_function.sql  00007_add_loan_actors.sql  00008_add_loans_table.sql  00009_add_payments_table.sql  00010_get_current_actor.sql  00011_add_payment_functions.sql  00012_add_actor_functions.sql
src/: lib.rs  main.rs  token.rs  utils.rs
src/cli/: cli.rs  makemigration.rs  mod.rs  pg_rest_config.rs
src/db/: mod.rs
