[package]
name = "gone_money"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
dotenv = "0.15.0"
clap = { version = "4.5.20", features = ["derive"] }
regex = "1.11.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.214", features = ["derive"] }


[profile.release]
strip = true
opt-level= "s"
codegen-units = 1
